# voiceChange

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: he.m4a
app/src/main/cpp/: CMakeLists.txt  androidlog.h  voice.cpp
app/src/main/java/me/liuningning/voicechange/: MainActivity.java  VoiceChange.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
